--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.17.3
   modal_progress_hud_nsn: ^0.5.1
   cloud_firestore: ^4.15.4
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
